tests/snapshots/generate_plan_tests__nim.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "nim"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "nimble build -d:release"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "nimble install -dy"
      ],
      "onlyIncludeFiles": [
        "nim.nimble"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "nim"
      ],
      "nixOverlays": [],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "./nim.exe"
  }
}
