tests/snapshots/generate_plan_tests__node_custom_cache_directories.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "CI": "true",
    "NIXPACKS_METADATA": "node",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cacheDirectories": [
        "node_modules/.cache",
        "hello"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "npm i"
      ],
      "cacheDirectories": [
        "/root/.npm"
      ],
      "paths": [
        "/app/node_modules/.bin"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "nodejs-16_x",
        "npm-8_x"
      ],
      "nixOverlays": [
        "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
      ],
      "nixpkgsArchive": "[archive]"
    }
  }
}
